--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,70 @@
-upstream rails_app {
-   server app:3000;
+user nginx;
+worker_processes 1;
+
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+events {
+  worker_connections  1024;
 }
 
-server {
-   listen  80;
-   listen  [::]:80;
+http {
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-   server_name  [IP];
+  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+      '$status $body_bytes_sent "$http_referer" '
+      '"$http_user_agent" "$http_x_forwarded_for"';
 
-   location / {
-      proxy_set_header  X-Real-IP  $remote_addr;
-      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-      proxy_pass http://rails_app;
-   }
+  access_log /var/log/nginx/access.log  main;
+
+  sendfile on;
+
+  # Tune nginx keepalives to work with the GCP HTTP(S) Load Balancer:
+  keepalive_timeout 650;
+  keepalive_requests 10000;
+
+  include /etc/nginx/conf.d/*.conf;
+
+  map $sent_http_content_type $expires {
+    default    off;
+    text/css  14d;
+    application/javascript  14d;
+    ~image/    14d;
+  }
+
+  server {
+    listen 80 default_server;
+
+    server_name _;
+
+    client_max_body_size 16m;
+
+    # skip explicity ?nocache urls
+    if ($args ~ (.*)nocache(.*)) {
+      set $expires off;
+    }
+
+    expires $expires;
+
+    gzip on;
+    # also use gzip when load balancer has added Via: headers
+    gzip_proxied any;
+    # serve precompressed version when available
+    gzip_static on;
+    gzip_types text/css application/javascript image/svg+xml text/plain;
+
+    root /var/www/;
+
+    location / {
+      try_files $uri $uri/index.html @app;
+    }
+
+    location @app {
+      proxy_pass http://127.0.0.1:3000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    }
+  }
 }
